Editing tasks and saving with minor bug in DatePicker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="app_name">MyTasks</string>
     <string name="add_task">Add</string>
-    <string name="delete_task">Delete</string>
+    <string name="delete">Delete</string>
     <string name="close">Close</string>
+    <string name="save">Save</string>
     <string name="date">Date</string>
     <string name="title">Title</string>
     <string name="description">Description</string>
