--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="title">Title</string>
     <string name="description">Description</string>
     <string name="due_date">Due date</string>
+    <string name="example1">Hacer las compras</string>
+    <string name="example2">Ir al gym</string>
+    <string name="example3">Trabajar</string>
 </resources>
