--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,12 @@
     <string name="example2">Ir al gym</string>
     <string name="example3">Trabajar</string>
     <string name="select_date">select a date</string>
+    <string name="home">Home</string>
+    <string name="login">Login</string>
+    <string name="login_google">Log in using Google</string>
+    <string name="bar_title">MyTasks</string>
+
+<!--    https://console.firebase.google.com/u/0/project/followapp-mytasks/authentication/providers?utm_source=studio-->
+    <string name="web_client_id">692558155479-800k03813n3hand9nljrlnrtdnl4sens.apps.googleusercontent.com</string>
+    <string name="navigation_drawer_close">close</string>
 </resources>
