--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,10 @@
 
 <!--    https://console.firebase.google.com/u/0/project/followapp-mytasks/authentication/providers?utm_source=studio-->
     <string name="web_client_id">692558155479-800k03813n3hand9nljrlnrtdnl4sens.apps.googleusercontent.com</string>
+    <!-- <string name="ad_unit_id">ca-app-pub-5163472824682213~4420222935</string>  FollowApp MyTasks ID -->
+    <string name="ad_unit_id">ca-app-pub-3940256099942544~3347511713</string>  <!-- Banner test ID -->
+    <string name="ad_id">ca-app-pub-3940256099942544/9214589741</string>  <!-- Test AdMob ID -->
+
     <string name="navigation_drawer_close">close</string>
     <string name="logout">Logout</string>
     <string name="done">Done</string>
