--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="navigation_drawer_close">close</string>
     <string name="logout">Logout</string>
     <string name="done">Done</string>
+    <string name="enter_a_title">Please enter a title</string>
 </resources>
